# particlePhysics

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  ReadMe.md  ReadMe.txt  circleParticle.cpp  circleParticle.h  enterContainer.sh  final_state.txt  killContainer.sh  main.cpp  next_state.txt  outfile.txt  outfile1.txt  outfile2.txt  outfile3.txt  particle.cpp  particle.h  particlePhysics  run.bash  run.out  startContainer.sh
.github/workflows/: docker-image.yml
Others/: Documentation.docx
data/: next_state.txt
headers/: circleParticle.h  collisions.h  functional.h  functionals.h  particle.h  squareParticle.h  timer.h
sources/: circleParticle.cpp  collisions.cpp  functional.cpp  particle.cpp  squareParticle.cpp
